--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body {
   background-size: cover;
   background-color: black;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden; }
 
 .background, .main__masVendido, .table-dark {
   background-color: rgba(0, 0, 0, 0.6);
