--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@ body{
     background-color: black;
     margin: 0;
     padding: 0;
+    overflow-x: hidden; 
 }
 .background{
     background-color: $background-color;
