--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ body {
     font-family: "Poppins";
     font-size: 1rem; }
 
+h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 2.5rem;
+  margin: 20px;
+  margin-bottom: 40px; }
+
 .main__input {
   display: block;
   margin: 10px;
@@ -39,8 +46,14 @@ body {
   .main__input .main__input--btn {
     width: 10%; }
 
-footer {
-  width: 100%; }
+footer img {
+  width: 100px;
+  border-radius: 10%;
+  margin-bottom: 3%; }
+
+footer p {
+  justify-content: center;
+  display: flex; }
 
 .menu__desktop {
   display: flex;
@@ -69,12 +82,15 @@ h1 {
   font-family: "Permanent Marker";
   padding: 2%; }
 
-legend, h1, h2, p, .white, nav {
+legend, h1, h2, p, .white {
   color: white; }
 
-b, #yo {
+i {
   color: #bc002d;
   font-family: "Permanent Marker"; }
+
+b {
+  font-family: sans-serif; }
 
 main {
   padding-top: 8%; }
@@ -89,14 +105,17 @@ main {
 .menu__mobile, .mobile__on {
   display: none; }
 
-fieldset p {
-  display: inline; }
+fieldset {
+  width: 100%; }
+  fieldset p {
+    display: inline; }
+  fieldset img {
+    height: 600px; }
 
 .table-dark {
   position: relative;
-  right: 2%;
   color: white;
-  width: 100%; }
+  width: 96%; }
   .table-dark th {
     width: 20%; }
     .table-dark th img {
@@ -107,11 +126,20 @@ iframe {
   height: 360px;
   width: auto; }
 
+.accept {
+  margin: 4%; }
+
+#gcw_mainF5KndqjFc {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 10; }
+
 @media only screen and (max-width: 1039px) {
   .menu__desktop, .main__ofertas, .mobile__off {
     display: none; }
   main {
-    margin-top: 50px; }
+    margin-top: 60px; }
   .image-hero-area {
     position: fixed;
     right: 0;
@@ -177,4 +205,12 @@ iframe {
   .main {
     padding: 0px;
     margin: 0px;
-    margin-top: 80px; } }
+    margin-top: 80px; }
+  #gcw_mainF5KndqjFc {
+    position: relative;
+    bottom: 0;
+    right: 2px; }
+  footer p {
+    display: none; }
+  footer img {
+    width: 50px; } }
