--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,14 @@ body {
     font-family: "Poppins";
     font-size: 1rem; }
 
-h2 {
+h3, h2 {
+  color: white;
   display: flex;
   justify-content: center;
   font-size: 2.5rem;
-  margin: 20px;
+  margin: 20px; }
+
+h2 {
   margin-bottom: 40px; }
 
 .main__input {
@@ -49,7 +52,7 @@ h2 {
 footer img {
   width: 100px;
   border-radius: 10%;
-  margin-bottom: 3%; }
+  margin-bottom: 30px; }
 
 footer p {
   justify-content: center;
@@ -78,19 +81,21 @@ footer p {
     background-color: black; }
 
 h1 {
+  color: white;
   font-size: 1.9rem;
   font-family: "Permanent Marker";
   padding: 2%; }
 
-legend, h1, h2, p, .white {
+legend, p, .white {
   color: white; }
 
-i {
+b {
   color: #bc002d;
   font-family: "Permanent Marker"; }
 
-b {
-  font-family: sans-serif; }
+i {
+  font-family: "Permanent Marker";
+  font-weight: 900; }
 
 main {
   padding-top: 8%; }
@@ -123,11 +128,11 @@ fieldset {
 
 iframe {
   margin: 20px;
-  height: 360px;
   width: auto; }
 
-.accept {
-  margin: 4%; }
+.envios {
+  height: 340px;
+  margin: 20px; }
 
 #gcw_mainF5KndqjFc {
   position: fixed;
@@ -158,8 +163,11 @@ iframe {
   .main__masVendido {
     flex-direction: column; }
   h1 {
-    padding-top: 20px;
-    padding-left: 5%; }
+    padding-top: 23px;
+    padding-left: 5%;
+    font-size: 1.6rem; }
+  h2 {
+    font-size: 2rem; }
   #dropdownMenuLink {
     width: 150%;
     height: 58%;
@@ -190,7 +198,7 @@ iframe {
       float: left;
       font-family: "Poppins"; }
   .main__input {
-    width: 90%; }
+    width: 94%; }
   input {
     display: block; }
   .dropdown-menu.show, .mobile__on {
@@ -213,4 +221,8 @@ iframe {
   footer p {
     display: none; }
   footer img {
-    width: 50px; } }
+    width: 50px; }
+  iframe, .envios {
+    height: auto;
+    margin: 0;
+    margin-bottom: 20px; } }
